--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "concurrently": "^6.2.0",
     "cors": "^2.8.5",
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "pg": "^8.3.2",
+    "sequelize": "^6.3.4"
   },
   "devDependencies": {
     "babel": "5.8.29",
